Fixes the z-index issue in the Media Manager.

--- a/modules/contentbox/modules/contentbox-admin/resources/assets/sass/theme/_main-content.scss
+++ b/modules/contentbox/modules/contentbox-admin/resources/assets/sass/theme/_main-content.scss
@@ -1,7 +1,6 @@
 #container {
     width: 100%;
     height: 100%;
-    z-index: 0;
     @include transition(all,.3s, ease-in-out);
 }
 
